fix some jfx problems